--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1115,6 +1115,7 @@
   @media (max-width: 480px) {
     .about-hero {
       min-height: 70vh;
+      padding-top: 75px;
     }
 
     .stats-section,
