--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -935,6 +935,7 @@
   @media (max-width: 480px) {
     .contact-hero {
       min-height: 70vh;
+      padding-top: 75px;
     }
 
     .contact-info-section,
